--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.valarx.com/note/static/style.css">
 </head>
 <body>
+<p style="margin-left: 20px">请在每次记录之前刷新页面 避免网络不畅未同步最新数据</p>
 <div class="container">
     <textarea id="content"
               placeholder="你的下一个笔记本 何必是笔记本；项目地址：https://github.com/Sunbalcony/note 欢迎star">{{.text}}</textarea>
