--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{.title}}</title>
-    <link rel="shortcut icon" href="./favicon.ico">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="https://cdn.ipip.icu/static/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.ipip.icu/static/style.css">
 </head>
 <body>
 <p style="margin-left: 20px">请在每次记录前刷新页面 避免数据同步异常</p>
@@ -13,6 +13,6 @@
               placeholder="你的下一个笔记本 何必是笔记本；项目地址：https://github.com/Sunbalcony/note 欢迎star">{{.text}}</textarea>
 </div>
 <pre id="printable"></pre>
-<script src="./script.js"></script>
+<script src="https://cdn.ipip.icu/static/script.js"></script>
 </body>
 </html>
